--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.AppCompat.NoActionBar">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,7 +20,8 @@
         <activity android:name=".CardViewActivity" />
         <activity android:name=".excessive.FristActivity" />
         <activity android:name=".excessive.SecondActivity" />
-        <activity android:name=".MaterialDesignActivity"></activity>
+        <activity android:name=".MaterialDesignActivity" />
+        <activity android:name=".ToolbarActivity"></activity>
     </application>
 
 </manifest>
